<resources>
    <string name="app_name">Career Anna</string>
    <string name="facebook_app_id">2353492718221066</string>
    <string name="fb_login_protocol_scheme">fb341622293308668</string>
    <string-array name="how_did">
        <item>How did you come to know about us ?</item>
        <item>Facebook</item>
        <item>Referred by Friend</item>
        <item>Google Search</item>
        <item>Quora</item>
        <item>Direct</item>
        <item>Mail</item>
    </string-array>
    <string name="explore">Explore</string>
    <string name="Rs">\u20B9</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="desc"><u>Description</u></string>
    <string name="ccourses"><u>Current Course</u></string>
    <string name="mycourses"><u>My Courses</u></string>
    <string name="mycourses_without_underline">My Courses</string>
    <string name="MBA">MBA</string>
    <string name="WishList">Wish List</string>
    <string name="settings">Settings</string>
    <string name="our_mentors">Our Mentors</string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="courses"><u>Top Courses</u></string>
    <string name="categories"><u>Categories</u></string>
    <string name="terms">By signing up you agree to our <u>Terms and Conditions </u>.</string>
    <string name="create"><u>Create an account</u>.</string>
    <string name="signup">Create an account? <u>Sign Up</u>.</string>
    <string name="tnc">Terms and Conditions</string>
    <string name="cert_date">Date of completion</string>
    <string name="cert_download">Download Certificate</string>
    <string name="change_content_language">Change content language</string>
    <string name="select_preferred_language">Choose your preferred language</string>

    <string name="intro_slide1_title">7,83,000+ Users</string>
    <string name="intro_slide1_desc">Largest Platform to Learn and Share Knowledge <br />  in Indian Languages.</string>
    <string name="intro_slide2_title">Video Based Learning</string>
    <string name="intro_slide2_desc">On Demand interactive video courses.</string>
    <string name="intro_slide3_title">Q&amp;A from Experts</string>
    <string name="intro_slide3_desc">Ask and Learn from experts and professionals who are passionate to help others learn.</string>

    <string name="intro_subhead_1">10 Languages. 1 Platform</string>
    <string name="intro_subhead_2">On Demand Videos by Top Educators</string>
    <string name="intro_subhead_3">Ask Anything You Need to Know</string>

    <string name="signout">Sign out</string>
    <string name="signin">Sign In</string>
    <string name="free_vid">Free Videos</string>
    <string name="trending_vid">Trending Videos</string>
    <string name="top_vid">Top Courses</string>

    <string name="sample_article_content">The little brown fox jumped over the lazy dog.
            The little brown fox jumped over the lazy dog. The little brown fox jumped over the lazy dog.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="courses1"><u>Courses</u></string>
    <string name="or">------------ OR ------------</string>
    <string name="enter_username_or_email">Enter Username or Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="mba_in_india">MBA</string>

    <string name="user_profile_notif_pref">Change notification Preferences</string>
    <string name="user_profile_support">Support</string>
    <string name="user_profile_app_ref_code">App Referral Code</string>

    <string-array name="india_states">
        <item>Select your state</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>

    <string name="dummy_striked_cost"><strike>₹5000</strike></string>
    <string name="dummy_discount">90% Off including taxes</string>
    <string name="largest_platform_to_learn_and_share_knowledge_n_in_indian_languages">Largest Platform to Learn and Share Knowledge <br />  in Indian Languages</string>

    <string name="no_course_added">Looks like you haven\'t added any courses yet!</string>
    <string name="loading_more_articles">Loading more articles...</string>
    <string name="enter_promocode">Please enter a valid promocode!</string>
    <string name="promocode_already_applied">This promocode is already applied.</string>
    <string name="promocode_checking">Checking promocode...</string>
    <string name="promocode_invalid">Invalid promocode</string>
    <string name="promocode_applied_on">This promocode is already applied on </string>
    <string name="promocode_date_expired">Sorry, this promocode has expired!</string>
    <string name="promocode_date_parse_failed">There was some problem in applying the promocode, please contact our support.</string>

    <string name="something_went_wrong">Oops, something went wrong, please try again!</string>
    <string name="pay_now">Payment in progress</string>

    <string name="course_delete_confirm">Are you sure you want to remove this course from the cart?</string>
    <string name="course_deleted">Course successfully removed</string>
    <string name="added_to_wishlist">Added to your wishlist!</string>
    <string name="loading_subcategory">Loading ...</string>
    <string name="loading_courses">Loading ... </string>
    <string name="loading_your_courses">Loading your courses...</string>
    <string name="open_browser_limit_reached">You have reached your limit of open browsing. Please sign up/ sign in for free to continue accessing the app.</string>
    <string name="forget_pw_enter_email">Please enter your registered email address</string>
    <string name="loading_premium_courses">Loading ... </string>
    <string name="loading_free_courses">Loading ... </string>
    <string name="loading_just_a_sec">Loading, ...</string>
    <string name="update_your_app">New version is up! Update to get new features and latest courses!</string>
    <string name="added_to_cart">Successfully added to cart!</string>
    <string name="please_wait">Please wait...</string>
    <string name="fetching_your_details">Fetching your details...</string>
    <string name="successfully_signing_in">Successfully signing in, just a sec...</string>
    <string name="failed_signing_in">Authentication failed!</string>
    <string name="no_user_exists">No such user exists, please register first.</string>
    <string name="course_already_in_cart">This course is already added in your cart.</string>
    <string name="please_register_to_continue">Please register first to add to cart</string>
    <string name="security_code_match">Security code successfully matched</string>
    <string name="security_code_not_match">Security code does not match</string>
    <string name="pw_not_match">Password does not match</string>
    <string name="loading_notes">Loading notes</string>
    <string name="network_error">Network error occured, please check your internet connection.</string>
    <string name="click_again_to_exit">Click again to exit</string>
    <string name="oops_looks_like_we_don_t_have_any_notes_for_this_course_yet_check_back_soon">Sorry, Ebooks is not the part of this course! Check videos</string>
    <string name="oops_looks_like_we_don_t_have_any_videos_for_this_course_yet_check_back_soon">Sorry, Videos is not the part of this course! Check ebooks</string>
    <string name="languages_coming_soon">Following languages are coming very soon!</string>
    <string name="you_can_view_content_in_language">You can now view content in </string>
    <string name="suggest_user">Let us know your interests so we can suggest some awesome courses for you!</string>
    <string name="certificates_user">Once you complete your courses, your certificates will appear here!</string>
    <string name="buy_this_fre_course">Add this course for free by clicking on the cart to view all videos!</string>

    <string name="articles">Articles</string>
    <string name="trending">Trending</string>
    <string name="free">Free Course</string>
    <string name="latest">Latest</string>
    <string name="premium">Premium Course</string>
    <string name="my_cart">My Cart</string>
    <string name="sign_in">Sign in</string>
    <string name="create_an_account">Create an account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="continue_with">Continue with</string>
    <string name="or_hindi">OR</string>
    <string name="log_in">Log In</string>
    <string name="account">Account</string>
    <string name="search_your_course"><font size="11">Search Your Course</font></string>
    <string name="videos">Videos</string>
    <string name="ebooks">E-Books</string>
    <string name="Test">Test</string>
    <string name="retry">Retry</string>
    <string name="an_error_has_occured_please_try_again_by_clicking_refresh">An Error Has Occured. Please Try Again By Clicking Refresh</string>
    <string name="refresh">Refresh</string>
    <string name="no_record_found">No Record Found ! \n Search Again</string>
    <string name="gotolanding">GoToLanding</string>
    <string name="go_to_sign_up">Go To Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_id">Email Id</string>
    <string name="log_in_with_google">Log In With Google</string>
    <string name="log_in_with_facebook">Log In With Facebook</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="city_name">City Name</string>
    <string name="i_agree_to_the_terms_of_service">I agree to the</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="premium_courses">Premium Courses</string>
    <string name="free_courses">Free Courses</string>
    <string name="DNA">Daily News Analysis</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="my_profile">My Profile</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="create_a_free_account">Create A Free Account</string>
    <string name="test">test</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="pay_via_payu_biz">Pay via <b>PayU Biz</b></string>
    <string name="pay_via_paytm">Pay via <b>Paytm</b></string>
    <string name="enroll_now">Enroll Now</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="think_careeranna">Think CareerAnna</string>
    <string name="think_mba">Think MBA</string>
</resources>
