<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sign_in_and_up_layout"
    android:background="#FFFFFF"
    tools:context=".user.SignUp">

    <LinearLayout
        android:id="@+id/login_and_sign_up_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10">

        <Button
            android:id="@+id/log_in_tab"
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:background="@drawable/border_bottom_for_active_tab"
            android:text="@string/log_in"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/sign_up_tab"
            android:textSize="15sp"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:background="@drawable/border_bottom_for_non_active_tab"
            android:text="@string/sign_up"
            android:textColor="@color/non_active_tab" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:paddingBottom="15dp"
                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginTop="8dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:paddingBottom="15dp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:text="@string/forgot_your_password"
            android:textColor="@color/ink_color"
            android:textSize="10sp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_curved_call_to_action"
            android:minHeight="40dp"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/or_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:weightSum="10">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="4.50"
                android:background="@android:color/black" />

            <TextView
                android:layout_width="0dp"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="or" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="4.50"
                android:background="@android:color/black" />

        </LinearLayout>

        <Button
            android:id="@+id/google_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_curved_google_login"
            android:minHeight="40dp"
            android:text="@string/log_in_with_google"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <Button
            android:visibility="gone"
            android:id="@+id/facebook_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_curver_facebook_login"
            android:minHeight="40dp"
            android:text="@string/log_in_with_facebook"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_sign_up_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="30"
            app:counterEnabled="true"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_sign_up_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:drawableRight="@drawable/ic_person_blue_24dp"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_email"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/input_sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_sign_up_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_sign_up_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:drawableRight="@drawable/ic_phone_blue_24dp"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_sign_up_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_sign_up_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city_name"
                android:drawableRight="@drawable/ic_location_on_red_24dp"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_agree_to_the_terms_of_service" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/transparent"
                android:minHeight="40dp"
                android:text="@string/terms_of_service"
                android:textColor="@color/ink_color" />

        </LinearLayout>


        <Button
            android:id="@+id/create_account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_curved_call_to_action"
            android:minHeight="40dp"
            android:text="@string/create_a_free_account"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </LinearLayout>


</RelativeLayout>